--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Meet</string>
-    <string name="index_text">Meet is always awesome</string>
+    <string name="index_text">相遇总是美好的</string>
+    <string name="text_guide_skip">跳过</string>
+    <string name="text_guide_pager_1">每个人，都是一颗孤独的星球</string>
+    <string name="text_guide_pager_2">我们在黑夜中寻找光明</string>
+    <string name="text_guide_pager_3">如果遇见，请面带微笑</string>
 </resources>
